--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="bb/">資管系首頁</a></li>
             <li><a href="cc/">資工系首頁</a></li>
         </ul>
-    <h2 style="color: rgb(255, 99, 71);>臺灣歌謠</h2>
+    <h2 >臺灣歌謠</h2>
 <h3>望春風</h3>
 獨夜無伴守燈下 冷風對面吹<br>
 十七八歲未出嫁 想著少年家<br>
