--- a/index.html
+++ b/index.html
@@ -1,9 +1,59 @@
 <!DOCTYPE html>
 <html lang="zh-Tw">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>這是標題文字</title>
+    <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="mycss.css" >
+<title></title>
+
+<style style type="text/css">
+
+table, th, td {
+    text-align: center;
+    border: 1px solid DodgerBlue;
+    border-radius: 10px;
+    font-size: 15px;
+    color: violet;
+    margin: 0 auto;
+}
+#font1{
+        font-size:60px;
+    }
+    #box1{
+        position: absolute;
+        top: 200px;
+        left:300px;
+        width: 600px;
+        height: 400px;
+        background-color: rgb(132, 0, 255);
+    }
+	    #box2{
+        position: absolute;
+        top: 50px;
+        left: 1500px;
+        width: 150px;
+        height: 600px;
+        background-color: rgb(0, 255, 13);
+    }
+	    #box3{
+        position: absolute;
+        top: 600px;
+        left: 1000px;
+        width: 800px;
+        height: 200px;
+        background-color: rgb(187, 255, 0);
+    }
+	    #box4{
+        position: absolute;
+        top: 800px;
+        left: 0px;
+        width: 1000px;
+        height: 200px;
+        background-color: rgb(4, 0, 255);
+    }
+
+</style>
 </head>
 <body>
     <P>網頁的內容</P>
