--- a/aa/index.html
+++ b/aa/index.html
@@ -128,7 +128,7 @@
             </dl>
         </div>
     </div>
-    <a href="/">回首頁</a><br>
+    <a href="../">回首頁</a><br>
     <!-- 頁底 -->
     <footer>
         鄭玉珍的網站 © 2024
