--- a/index.html
+++ b/index.html
@@ -1,90 +1,133 @@
 <!DOCTYPE html>
-<html lang="zh-Tw">
+<html lang="zh-Hant">
 <head>
-    <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="mycss.css" >
-<title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>鄭玉珍的網站</title>
 
-<style style type="text/css">
+    <style>
+        /* 設定整個網頁背景 */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #F3FF96;
+        }
 
-table, th, td {
-    text-align: center;
-    border: 1px solid DodgerBlue;
-    border-radius: 10px;
-    font-size: 15px;
-    color: violet;
-    margin: 0 auto;
-}
-#font1{
-        font-size:60px;
-    }
-    #box1{
-        position: absolute;
-        top: 200px;
-        left:300px;
-        width: 600px;
-        height: 400px;
-        background-color: rgb(132, 0, 255);
-    }
-	    #box2{
-        position: absolute;
-        top: 50px;
-        left: 1500px;
-        width: 150px;
-        height: 600px;
-        background-color: rgb(0, 255, 13);
-    }
-	    #box3{
-        position: absolute;
-        top: 600px;
-        left: 1000px;
-        width: 800px;
-        height: 200px;
-        background-color: rgb(187, 255, 0);
-    }
-	    #box4{
-        position: absolute;
-        top: 800px;
-        left: 0px;
-        width: 1000px;
-        height: 200px;
-        background-color: rgb(4, 0, 255);
-    }
+        /* 頁面標題 */
+        h1 {
+            text-align: center;
+            color: #F7CBCB; /* 番茄紅 */
+            font-size: 48px;
+            margin-top: 20px;
+        }
 
-</style>
+        /* 副標題 */
+        h2, h3 {
+            text-align: center;
+            color: #333; /* 黑色 */
+        }
+
+        /* 設定頁面內容區域為 Flex 布局 */
+        .container {
+            display: flex;
+            justify-content: space-between; /* 讓元素在水平方向上分散對齊 */
+            padding: 20px;
+        }
+
+        /* 每個格子 */
+        .box {
+            flex: 1; /* 讓每個區塊等比例分配空間 */
+            margin: 10px;
+            padding: 20px;
+            border-radius: 10px;
+            color: white;
+            text-align: center;
+        }
+
+        /* 左側區塊顏色 */
+        #box1 {
+            background-color: #A8E9ED; 
+        }
+
+        /* 中間區塊顏色 */
+        #box2 {
+            background-color: #886600; 
+            color: black;
+        }
+
+        /* 右側區塊顏色 */
+        #box3 {
+            background-color: #FFBFFD;
+            color: black;
+        }
+
+        /* 歌詞與段落設置 */
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        /* 定義定義列表 */
+        dl {
+            text-align: left;
+            margin: 20px auto;
+            width: 80%;
+            font-size: 18px;
+        }
+
+        /* 頁腳設置 */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            font-size: 14px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
+
 <body>
-    <P>網頁的內容</P>
-    <P>這是段落</P>
-<h1 style="color: rgb(255, 99, 71);">鄭玉珍的網站</h1>
-   
-        <ul>
-            <li><a href="aa/">電機系首頁</a></li>
-            <li><a href="bb/">資管系首頁</a></li>
-            <li><a href="cc/">資工系首頁</a></li>
-        </ul>
+    <!-- 網頁標題 -->
+    <h1>鄭玉珍的網站</h1>
+    <ul>
+        <li><a href="aa/">電機系首頁</a></li>
+        <li><a href="bb/">資管系首頁</a></li>
+        <li><a href="cc/">資工系首頁</a></li>
+    </ul>
     <h2>臺灣歌謠</h2>
-<h3>望春風</h3>
-獨夜無伴守燈下 冷風對面吹<br>
-十七八歲未出嫁 想著少年家<br>
-果然標緻面肉白 誰家人子弟 <br>
-想要問伊驚歹勢 心內彈琵琶<br>
-<hr>
-想要郎君作翁婿 意愛在心裡<br>
-等待何時君來採 青春花當開 <br>
-聽見外面有人來 開門嘎看嘜<br>
-月老笑阮憨大呆 被風騙不知<br>  
+    <h3>望春風</h3>
 
-<dl>
-    <dt>馬爾濟斯的特徵</dt>
-        <dd>白色長毛的小型犬種，性情溫和，外表可愛，撒嬌好客</dd>
-    <dt>博美犬的特徵</dt>
-        <dd>體型嬌小，移動快速而輕盈，尾巴向上翹到背上</dd>
-    <dt>吉娃娃的特徵</dt>
-        <dd>耳朵很大，於頭上形成一個相當大的鈍角</dd>
-    </dl>
+    <!-- 網頁內容區域，包含左、中、右三個格子 -->
+    <div class="container">
+        <!-- 左側區塊 -->
+        <div id="box1" class="box">
+            <p>獨夜無伴守燈下 冷風對面吹<br>十七八歲未出嫁 想著少年家<br>果然標緻面肉白 誰家人子弟<br>想要問伊驚歹勢 心內彈琵琶</p>
+        </div>
 
+        <!-- 中間區塊 -->
+        <div id="box2" class="box">
+            <p>想要郎君作翁婿 意愛在心裡<br>等待何時君來採 青春花當開<br>聽見外面有人來 開門嘎看嘜<br>月老笑阮憨大呆 被風騙不知</p>
+        </div>
+
+        <!-- 右側區塊 -->
+        <div id="box3" class="box">
+            <h3>犬種特徵</h3>
+            <dl>
+                <dt>馬爾濟斯的特徵</dt>
+                <dd>白色長毛的小型犬種，性情溫和，外表可愛，撒嬌好客</dd>
+                <dt>博美犬的特徵</dt>
+                <dd>體型嬌小，移動快速而輕盈，尾巴向上翹到背上</dd>
+                <dt>吉娃娃的特徵</dt>
+                <dd>耳朵很大，於頭上形成一個相當大的鈍角</dd>
+            </dl>
+        </div>
+    </div>
+
+    <!-- 頁底 -->
+    <footer>
+        鄭玉珍的網站 © 2024
+    </footer>
 </body>
 </html>
