--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
         <li><a href="aa/">電機系首頁</a></li>
         <li><a href="bb/">資管系首頁</a></li>
         <li><a href="cc/">資工系首頁</a></li>
+        <li><a href="aa/">電機系首頁</a></li>
+        <li><a href="aa/">電機系首頁</a></li>
+        <li><a href="aa/">電機系首頁</a></li>
+
+        
     </ul>
     <h2>臺灣歌謠</h2>
     <h3>望春風</h3>
