--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         <li><a href="aa/">電機系首頁</a></li>
         <li><a href="bb/">資管系首頁</a></li>
         <li><a href="cc/">資工系首頁</a></li>
-        <li><a href="aa/">電機系首頁</a></li>
-        <li><a href="aa/">電機系首頁</a></li>
-        <li><a href="aa/">電機系首頁</a></li>
+        <li><a href="dd/">QR扣輸出首頁</a></li>
+        <li><a href="ee/">旅遊系統首頁</a></li>
+        <li><a href="ff/">點名系統首頁</a></li>
 
         
     </ul>
