--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <li><a href="cc/">資工系首頁</a></li>
         <li><a href="dd/">QR扣輸出首頁</a></li>
         <li><a href="ee/">旅遊系統首頁</a></li>
-        <li><a href="cc/templates/index.html">點名系統首頁</a></li>
+        <li><a href="attendance_system">點名系統首頁</a></li>
 
         
     </ul>
