--- a/dd/index.html
+++ b/dd/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
@@ -18,6 +18,9 @@
             font-size: 16px;
             margin: 5px;
         }
+        .image-container {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -26,6 +29,11 @@
     <input type="text" id="text-input" placeholder="輸入文字或網址" size="30">
     <button onclick="generateQRCode()">生成 QR Code</button>
     <div class="qr-code" id="qr-code"></div>
+    <div class="image-container">
+        <p>將生成類似圖片。</p>
+        <img src="qrcode.png" alt="描述圖片" id="custom-image" style="max-width: 100%; height: auto;">
+        
+    </div>
 
     <script>
         function generateQRCode() {
