--- a/ee/index.html
+++ b/ee/index.html
@@ -64,6 +64,15 @@
         .carousel img.prev {
             left: -100%;
         }
+        /* 頁腳設置 */
+        footer {
+            background-color: #666;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            font-size: 14px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
