--- a/ee/index.html
+++ b/ee/index.html
@@ -145,7 +145,7 @@
             setInterval(nextImage, 3000); // 切換時間為 3 秒
         });
     </script>
-    <a href="./">回上頁</a><br>
+    <a href="../">回首頁</a><br>
     <!-- 頁底 -->
     <footer>
         鄭玉珍的網站 © 2024
