--- a/ff/index.html
+++ b/ff/index.html
@@ -36,6 +36,15 @@
         input[type="submit"]:hover {
             background-color: #45a049;
         }
+         /* 頁腳設置 */
+        footer {
+            background-color: #666;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            font-size: 14px;
+            margin-top: 20px;
+        } 
     </style>
 </head>
 <body>
