--- a/ff/index.html
+++ b/ff/index.html
@@ -108,5 +108,11 @@
             citySelect.value = ''; // 重置縣市選擇
         });
     </script>
+   
 </body>
+     <a href="../">回首頁</a><br>
+    <!-- 頁底 -->
+    <footer>
+        鄭玉珍的網站 © 2024
+    </footer>
 </html>
