--- a/dd/index.html
+++ b/dd/index.html
@@ -21,6 +21,15 @@
         .image-container {
             margin-top: 20px;
         }
+          /* 頁腳設置 */
+        footer {
+            background-color: #444;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            font-size: 14px;
+            margin-top: 20px;
+        } 
     </style>
 </head>
 <body>
