--- a/dd/index.html
+++ b/dd/index.html
@@ -60,5 +60,10 @@
             qrCodeContainer.innerHTML = `<img src="${qrCodeUrl}" alt="QR Code">`;
         }
     </script>
+     <a href="../">回首頁</a><br>
+    <!-- 頁底 -->
+    <footer>
+        鄭玉珍的網站 © 2024
+    </footer>
 </body>
 </html>
